--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@ const firebaseConfig = {
   appId: "1:361630774945:web:402edb363d388a61baa2e0",
   measurementId: "G-BGV3P2HQZP"
 };
-  if(!firebase.apps.length)firebase.initializeApp(firebaseConfig);
-  const auth=firebase.auth();const db=firebase.database();
+  if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.database();
 
   // DOM
   const authView=document.getElementById('authView'),dashboardView=document.getElementById('dashboardView'),setupView=document.getElementById('setupView'),
@@ -226,3 +227,4 @@ const firebaseConfig = {
 </script>
 </body>
 </html>
+
