--- a/index.html
+++ b/index.html
@@ -156,17 +156,21 @@ const firebaseConfig = {
   });
 
   function showDashboard(uid){
-    db.ref(`users/${uid}/studies`).on('value',snap=>{
-      studiesList.innerHTML='';const data=snap.val()||{};
-      Object.values(data).forEach(study=>{
-        const div=document.createElement('div');div.className='study-item';
-        div.innerHTML=`<span>${study.name}</span><button class="btn btn-success">Results</button>`;
-        div.querySelector('button').onclick=()=>viewResults(uid,study.id);
-        studiesList.appendChild(div);
-      });
-    });
-  }
+  db.ref(`users/${uid}/studies`).on('value', snap=>{
+    studiesList.innerHTML = '';
+    const data = snap.val() || {};
 
+    Object.entries(data).forEach(([studyId, study])=>{
+      const div = document.createElement('div');
+      div.className = 'study-item';
+      div.innerHTML = `
+        <span>${study.name}</span>
+        <button class="btn btn-success">Results</button>`;
+      div.querySelector('button').onclick = () => viewResults(uid, studyId);
+      studiesList.appendChild(div);
+    });
+  });
+}
   // Parse link for participant
   const params=new URLSearchParams(location.search);const uid=params.get('uid'),studyId=params.get('study');
   if(uid&&studyId){loadParticipantView(uid,studyId);}
@@ -236,3 +240,4 @@ const firebaseConfig = {
 </script>
 </body>
 </html>
+
